--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -156,7 +156,7 @@ $chrome = flatpak run com.google.chrome --profile-directory=default
 
 # screen grab
 $screenshot-full = grim - | tee ~/Pictures/scrn-$(date +"%Y-%m-%d-%H:%M:%S").png | wl-copy && notify-send " Screenshot" -t 250
-$screenshot-area grim -g "$(slurp)" - | tee ~/Pictures/scrn-$(date +"%Y-%m-%d-%H:%M:%S").png | wl-copy && notify-send " Screenshot" -t 250
+$screenshot-area =  grim -g "$(slurp)" - | tee ~/Pictures/scrn-$(date +"%Y-%m-%d-%H:%M:%S").png | wl-copy && notify-send " Screenshot" -t 250
 
 $swappy-full = grim - | swappy -f -
 $swappy-area = grim -g "$(slurp)" - | swappy -f -
@@ -207,7 +207,8 @@ $emoji = emoji-fzf preview | fzf -m --preview '~/.config/sway/scripts/emoji-fzf 
 #for_window [title="emoji-picker"] focus
 #for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10, focus
 
-bind = Caps_Lock, exec, hyprctl input type:touchpad events toggle && notify-send "🚀 Trackpad Toggled" -t 150
+# Capts lock for toggling touchpad, find fix for hyprland
+#bind = Caps_Lock, exec, hyprctl input type:touchpad events toggle && notify-send "🚀 Trackpad Toggled" -t 150
 
 bind = $mainMod, Return, exec, flatpak run com.google.Chrome
 bind = $mainMod SHIFT, Return, exec, $host 
