minor tweaks to hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -207,7 +207,50 @@ $emoji = emoji-fzf preview | fzf -m --preview '~/.config/sway/scripts/emoji-fzf 
 #for_window [title="emoji-picker"] focus
 #for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10, focus
 
-# Capts lock for toggling touchpad, find fix for hyprland
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# mapping workspaces to displays
+workspace = 1, monitor:eDP-1, default:true
+workspace = 2, monitor:eDP-1
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:eDP-1
+workspace = 5, monitor:eDP-1
+workspace = 6, monitor:eDP-1
+workspace = 7, monitor:eDP-1
+workspace = 8, monitor:eDP-1
+workspace = 9, monitor:eDP-1
+workspace = 10, monitor:eDP-1
+workspace = name:music, monitor:eDP-2
+workspace = name:chatgpt, monitor:eDP-2, default:true
+workspace = name:email, monitor:eDP-2
+workspace = name:linear, monitor:eDP-2
+workspace = name:notion, monitor:eDP-2
+workspace = name:loom, monitor:eDP-2
+workspace = name:calendar, monitor:eDP-2
+
+# Caps lock for toggling touchpad, find fix for hyprland
 #bind = Caps_Lock, exec, hyprctl input type:touchpad events toggle && notify-send "🚀 Trackpad Toggled" -t 150
 
 bind = $mainMod, Return, exec, flatpak run com.google.Chrome
@@ -333,50 +376,7 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = Mod1 CTRL, Delete, exec, $fzf-power-menu
 
 # XF86Search used to do azote, now need different
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# mapping workspaces to displays
-workspace = 1, monitor:eDP-1, default:true
-workspace = 2, monitor:eDP-1
-workspace = 3, monitor:eDP-1
-workspace = 4, monitor:eDP-1
-workspace = 5, monitor:eDP-1
-workspace = 6, monitor:eDP-1
-workspace = 7, monitor:eDP-1
-workspace = 8, monitor:eDP-1
-workspace = 9, monitor:eDP-1
-workspace = 10, monitor:eDP-1
-workspace = name:music, monitor:eDP-2
-workspace = name:chatgpt, monitor:eDP-2, default:true
-workspace = name:email, monitor:eDP-2
-workspace = name:linear, monitor:eDP-2
-workspace = name:notion, monitor:eDP-2
-workspace = name:loom, monitor:eDP-2
-workspace = name:calendar, monitor:eDP-2
-
+#
 # chrome webapps
 windowrulev2 = move,name:^google-chrome$,workspace:1
 windowrulev2 = move,name:^chrome-soundcloud.com.*$,workspace:music
@@ -409,10 +409,6 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-# gsettings:
-exec-once=gsettings set org.gnome.desktop.interface cursor-theme Qogir-cursors
-exec-once=gsettings set org.gnome.desktop.interface gtk-theme Kripton
-exec-once=gsettings set org.gnome.desktop.wm.preferences theme Kripton
 
 decoration {
 
