moving scripts out of wm config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -154,30 +154,22 @@ $host = kitty
 
 $chrome = flatpak run com.google.chrome --profile-directory=default
 
-# screen grab
-$screenshot-full = grim - | tee ~/Pictures/scrn-$(date +"%Y-%m-%d-%H:%M:%S").png | wl-copy && notify-send " Screenshot" -t 250
-$screenshot-area =  grim -g "$(slurp)" - | tee ~/Pictures/scrn-$(date +"%Y-%m-%d-%H:%M:%S").png | wl-copy && notify-send " Screenshot" -t 250
+$screenshot-full = $scripts/screenshot full
+$screenshot-area = $scripts/screenshot area
 
-$swappy-full = grim - | swappy -f -
-$swappy-area = grim -g "$(slurp)" - | swappy -f -
+$swappy-full = $scripts/swappy full
+$swappy-area = $scripts/swappy area
 
-$record-start = notify-send -u critical " screen recording started" -t 0 && wf-recorder -o $(swaymsg -r -t get_outputs | jq -r '.[] | select(.focused == true).name') -f ~/videos/scrn-$(date +'%y-%m-%d-%h:%m:%s').mp4 &> /dev/null  
-$record-select-area = notify-send -u critical " Screen Recording Started" -t 0 && wf-recorder -o $(swaymsg -r -t get_outputs | jq -r '.[] | select(.focused == true).name') -g "$(slurp)" -f ~/Videos/scrn-$(date +'%Y-%m-%d-%H:%M:%S').mp4 &> /dev/null
-$record-stop = pkill -SIGINT wf-recorder && notify-send -u low " Screen Recording Stopped" -t 0
+$record-start = $scripts/record start
+$record-select-area = $scripts/record select
+$record-stop = $scripts/record stop
 
-$volume-up = amixer sset Master 5%+ && notify-send "🔊 Volume up" "$(amixer get Master | grep -oP '\[\d+%\]' | head -1 | tr -d '[]%')" -t 250
-$volume-down = amixer sset Master 5%- && notify-send "🔉 Volume down" "$(amixer get Master | grep -oP '\[\d+%\]' | head -1 | tr -d '[]%')" -t 250
-$volume-mute = amixer sset Master toggle && amixer get Master | awk '/\[off\]/ {print "mute"; exit} /\[on\]/ {gsub(/\[|\]/, "", $5); print "unmute " $5; exit}' | xargs -I {} bash -c 'if [[ "{}" == "mute" ]]; then notify-send "🔇 Muted" -t 250; else notify-send "🔊 Volume" "$(echo {} | cut -d" " -f2)%" -t 250; fi'
+$volume-up = $scripts/volume up
+$volume-down = $scripts/volume down
+$volume-mute = $scripts/volume mute
 
-$brightness-top-up = light -A 5 -s sysfs/backlight/intel_backlight && light -G -s sysfs/backlight/intel_backlight | xargs -I {} notify-send "☀️ Brightness up (Top)" "{}%" -t 250
-$brightness-top-down = light -U 5 -s sysfs/backlight/intel_backlight && light -G -s sysfs/backlight/intel_backlight | xargs -I {} notify-send "🔅 Brightness down (Top)" "{}%" -t 250
-$brightness-top-up-single = light -A 1 -s sysfs/backlight/intel_backlight && light -G -s sysfs/backlight/intel_backlight | xargs -I {} notify-send "☀️ Brightness up (Top)" "{}%" -t 250
-$brightness-top-down-single = light -U 1 -s sysfs/backlight/intel_backlight && light -G -s sysfs/backlight/intel_backlight | xargs -I {} notify-send "🔅 Brightness down (Top)" "{}%" -t 250
-
-$brightness-bottom-up = light -A 5 -s sysfs/backlight/card1-eDP-2-backlight && light -G -s sysfs/backlight/card1-eDP-2-backlight | xargs -I {} notify-send "☀️ Brightness up (Bottom)" "{}%" -t 250
-$brightness-bottom-down = light -U 5 -s sysfs/backlight/card1-eDP-2-backlight && light -G -s sysfs/backlight/card1-eDP-2-backlight | xargs -I {} notify-send "🔅 Brightness down (Bottom)" "{}%" -t 250
-$brightness-bottom-up-single = light -A 1 -s sysfs/backlight/card1-eDP-2-backlight && light -G -s sysfs/backlight/card1-eDP-2-backlight | xargs -I {} notify-send "☀️ Brightness up (Bottom)" "{}%" -t 250
-$brightness-bottom-down-single = light -U 1 -s sysfs/backlight/card1-eDP-2-backlight && light -G -s sysfs/backlight/card1-eDP-2-backlight | xargs -I {} notify-send "🔅 Brightness down (Bottom)" "{}%" -t 250
+$brightness-top = $scripts/brightness-control top
+$brightness-bottom = $scripts/brightness-control bottom
 
 $waybar-toggle-0 = pkill -SIGUSR1 -f 'waybar -c /var/home/dev/.config/waybar/config-0'
 $waybar-toggle-1 = pkill -SIGUSR1 -f 'waybar -c /var/home/dev/.config/waybar/config-1'
@@ -194,7 +186,7 @@ $fzf-shortcuts = kitty --class 'shortcutwidget' -e $scripts/fzf-shortcuts
 $music-cli = kitty --class 'music-cli' -e ncmpcpp 
 $music-dl = $scripts/music-download
 $color-picker = $scripts/colorpicker 
-$emoji = emoji-fzf preview | fzf -m --preview '~/.config/sway/scripts/emoji-fzf get --name {1}' | cut -d ' ' -f 1 | ~/.config/sway/scripts/emoji-fzf get | clipman store
+$emoji = $scripts/emoji-picker
 
 ## previous window rules
 #for_window [title="networkwidget"] border pixel 0, floating enable, resize set 453 500, move position 1380 490
@@ -258,9 +250,9 @@ bind = $mainMod SHIFT, Return, exec, $host
 
 bind = $mainMod SHIFT, Q, killactive,
 
-bind = $mainMod, D, exec, kitty --class=launcher -e env GLYPH_COMMAND="" GLYPH_DESKTOP="" GLYPH_PROMPT="🚀 " $scripts/sway-launcher-desktop
+bind = $mainMod, D, exec, kitty --class=launcher -e env GLYPH_COMMAND="" GLYPH_DESKTOP="" GLYPH_PROMPT="🚀 " $scripts/launcher
 
-bind = $mainMod, V, exec, alacritty --class "clipboard-history" -t "clipboard-history" -e $scripts/fzf-clipboard-history
+bind = $mainMod, V, exec, kitty --class "clipboard-history" -t "clipboard-history" -e $scripts/fzf-clipboard-history
 
 bind = $mainMod SHIFT, V, exec, kitty --class "emoji-picker" -e sh -c "$scripts/$emoji"
 
@@ -328,15 +320,16 @@ bind = XF86AudioMute, exec, $volume-mute
 bind = XF86AudioMicMute, exec, kitty -e nmtui
 bind = $mainMod XF86AudioMicMute, exec, blueman-manager
 
-bind = XF86MonBrightnessUp, exec, $brightness-top-up
-bind = XF86MonBrightnessDown, exec, $brightness-top-down
-bind = $mainMod XF86MonBrightnessUp, exec, $brightness-top-up-single
-bind = $mainMod XF86MonBrightnessDown, exec, $brightness-top-down-single
+bind = XF86MonBrightnessUp, exec, $brightness-top up
+bind = XF86MonBrightnessDown, exec, $brightness-top down
+bind = $mainMod XF86MonBrightnessUp, exec, $brightness-top up-single
+bind = $mainMod XF86MonBrightnessDown, exec, $brightness-top down-single
 
-bind = $mainMod SHIFT XF86MonBrightnessUp, exec, $brightness-bottom-up
-bind = $mainMod SHIFT XF86MonBrightnessDown, exec, $brightness-bottom-down
-bind = $mainMod SHIFT $mainMod XF86MonBrightnessUp, exec, $brightness-bottom-up-single
-bind = $mainMod SHIFT $mainMod XF86MonBrightnessDown, exec, $brightness-bottom-down-single
+# Key bindings for bottom display brightness control
+bind = XF86MonBrightnessUp, exec, $brightness-bottom up
+bind = XF86MonBrightnessDown, exec, $brightness-bottom down
+bind = $mainMod XF86MonBrightnessUp, exec, $brightness-bottom up-single
+bind = $mainMod XF86MonBrightnessDown, exec, $brightness-bottom down-single
 
 # decide what key to use to dismiss notifications!!
 # bind = $mainMod, delete, exec, makoctl dismiss -a
