--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -78,7 +78,7 @@ $crustAlpha = 11111b
 
 # variables
 $mainMod = SUPER
-$scripts = ~/.config/hypr/scripts
+$scripts = /var/home/dev/.config/hypr/scripts
 
 # gaps
 general {
@@ -385,8 +385,8 @@ windowrulev2 = move,name:^chrome-calendar.notion.so.*$,workspace:calendar
 
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
+    kb_model = apple
+    kb_variant = mac
     kb_options = caps:none
     kb_rules =
 
