--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -313,21 +313,21 @@ bind = $mainMod SHIFT, Slash, exec, $fzf-shortcuts
 
 # the +Tab and Shift+Tab used to manage floating, now needs to change
 
-bind = XF86AudioRaiseVolume, exec, $volume-up
-bind = XF86AudioLowerVolume, exec, $volume-down
-bind = XF86AudioMute, exec, $volume-mute
+bind = , XF86AudioRaiseVolume, exec, $volume-up
+bind = , XF86AudioLowerVolume, exec, $volume-down
+bind = , XF86AudioMute, exec, $volume-mute
 
-bind = XF86AudioMicMute, exec, kitty -e nmtui
+bind = , XF86AudioMicMute, exec, kitty -e nmtui
 bind = $mainMod XF86AudioMicMute, exec, blueman-manager
 
-bind = XF86MonBrightnessUp, exec, $brightness-top up
-bind = XF86MonBrightnessDown, exec, $brightness-top down
+bind = , XF86MonBrightnessUp, exec, $brightness-top up
+bind = , XF86MonBrightnessDown, exec, $brightness-top down
 bind = $mainMod XF86MonBrightnessUp, exec, $brightness-top up-single
 bind = $mainMod XF86MonBrightnessDown, exec, $brightness-top down-single
 
 # Key bindings for bottom display brightness control
-bind = XF86MonBrightnessUp, exec, $brightness-bottom up
-bind = XF86MonBrightnessDown, exec, $brightness-bottom down
+bind = , XF86MonBrightnessUp, exec, $brightness-bottom up
+bind = , XF86MonBrightnessDown, exec, $brightness-bottom down
 bind = $mainMod XF86MonBrightnessUp, exec, $brightness-bottom up-single
 bind = $mainMod XF86MonBrightnessDown, exec, $brightness-bottom down-single
 
