--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,6 +13,7 @@ env = XCURSOR_SIZE,24
 env = XCURSOR_THEME, Bibata-Modern-Classic
 env = WLR_NO_HARDWARE_CURSORS=1
 env = GTK_THEME,Catppuccin-Mocha-Standard-Green-Dark
+env = GTK_ICON_THEME,oomox-Catppuccin-Frappe 
 env = QT_STYLE_OVERRIDE,Catppuccin-Mocha
 env = QT_AUTO_SCREEN_SCALE_FACTOR, 0
 env = QT_SCALE_FACTOR, 1.4
@@ -106,7 +107,6 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-size "24"
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Catppuccin-Mocha-Standard-Green-Dark"
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 exec-once = gsettings set org.gnome.desktop.interface icon-theme "oomox-Catppuccin-Frappe"
-exec-once = gsettings set org.gnome.desktop.wm.preferences theme "Catppuccin-Mocha-Standard-Green-Dark"
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ""
 
 # import variables into system-user environment
@@ -114,16 +114,15 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # gammastep configured differently for each display
-exec-once = gammastep -d eDP-1 -t 3500:3500 -l 30.2:97.7 -m wayland
-exec-once = gammastep -d eDP-2 -t 3500:3500 -l 30.2:97.7 -m wayland
+exec-once = gammastep -t 3500:3500 -l 30.2:97.7 -m wayland
 
 # notifications
 exec-once = mako
 
 # clipboard
 exec-once = clipman restore
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+exec-once = wl-paste --type text --watch clipman store
+exec-once = wl-paste --type image --watch clipman store
 
 # pomodoro timer
 exec-once = $scripts/pomo start
@@ -168,8 +167,8 @@ $volume-up = $scripts/volume up
 $volume-down = $scripts/volume down
 $volume-mute = $scripts/volume mute
 
-$brightness-top = $scripts/brightness-control top
-$brightness-bottom = $scripts/brightness-control bottom
+$brightness-up = $scripts/brightness-control up
+$brightness-down = $scripts/brightness-control down
 
 $waybar-toggle-0 = pkill -SIGUSR1 -f 'waybar -c /var/home/dev/.config/waybar/config-0'
 $waybar-toggle-1 = pkill -SIGUSR1 -f 'waybar -c /var/home/dev/.config/waybar/config-1'
@@ -179,7 +178,7 @@ $playerctl-playing = notify-send "$(playerctl metadata artist)" "$(playerctl met
 $start-wshowkeys = wshowkeys -F "JetBrainsMono Nerd Font 16" -a bottom
 $stop-wshowkeys = pkill wshowkeys
 
-# include wifi nmtui blueman-manager pavucontrol
+# include wifi nmtui blueman-manager 
 $fzf-power-menu = alacritty -o font.size=22 --class 'powerwidget' -t 'powerwidget' -e $scripts/fzf-power-menu
 $fzf-shortcuts = kitty --class 'shortcutwidget' -e $scripts/fzf-shortcuts
 
@@ -318,18 +317,11 @@ bind = , XF86AudioLowerVolume, exec, $volume-down
 bind = , XF86AudioMute, exec, $volume-mute
 
 bind = , XF86AudioMicMute, exec, kitty -e nmtui
-bind = $mainMod XF86AudioMicMute, exec, blueman-manager
+bind = , XF86LaunchA, exec, blueman-manager
+bind = , XF86Search, exec, pavucontrol
 
-bind = , XF86MonBrightnessUp, exec, $brightness-top up
-bind = , XF86MonBrightnessDown, exec, $brightness-top down
-bind = $mainMod XF86MonBrightnessUp, exec, $brightness-top up-single
-bind = $mainMod XF86MonBrightnessDown, exec, $brightness-top down-single
-
-# Key bindings for bottom display brightness control
-bind = , XF86MonBrightnessUp, exec, $brightness-bottom up
-bind = , XF86MonBrightnessDown, exec, $brightness-bottom down
-bind = $mainMod XF86MonBrightnessUp, exec, $brightness-bottom up-single
-bind = $mainMod XF86MonBrightnessDown, exec, $brightness-bottom down-single
+bind = , XF86MonBrightnessUp, exec, $brightness-up
+bind = , XF86MonBrightnessDown, exec, $brightness-down
 
 # decide what key to use to dismiss notifications!!
 # bind = $mainMod, delete, exec, makoctl dismiss -a
@@ -368,8 +360,6 @@ bindm = $mainMod, mouse:273, resizewindow
 
 bind = Mod1 CTRL, Delete, exec, $fzf-power-menu
 
-# XF86Search used to do azote, now need different
-#
 # chrome webapps
 windowrulev2 = move,name:^google-chrome$,workspace:1
 windowrulev2 = move,name:^chrome-soundcloud.com.*$,workspace:music
