--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -259,7 +259,6 @@ bind = $mainMod, A, exec, $screenshot-full
 bind = $mainMod SHIFT, A, exec, $screenshot-area
 bind = $mainMod, S, exec, $swappy-full
 bind = $mainMod SHIFT, S, exec, $swappy-area
-bind = Print, exec, $swappy-area
 
 bind = $mainMod, Z, exec, $record-start
 bind = $mainMod SHIFT, Z, exec, $record-select-area
@@ -332,20 +331,20 @@ bind = $mainMod, j, movefocus, down
 bind = $mainMod, k, movefocus, up
 bind = $mainMod, l, movefocus, right
 
-bind = $mainMod, Left, resize, shrink width 25 
-bind = $mainMod, Down, resize, shrink height 25
-bind = $mainMod, Up, resize, grow height 25 
-bind = $mainMod, Right, resize, grow width 25 
+bind = $mainMod, Left, resizeactive, shrink width 25 
+bind = $mainMod, Down, resizeactive, shrink height 25
+bind = $mainMod, Up, resizeactive, grow height 25 
+bind = $mainMod, Right, resizeactive, grow width 25 
 
-bind = $mainMod SHIFT, h, move, left 25
-bind = $mainMod SHIFT, j, move, down 25
-bind = $mainMod SHIFT, k, move, up 25
-bind = $mainMod SHIFT, l, move, right 25
-
-bind = $mainMod SHIFT, Left, move, left 50
-bind = $mainMod SHIFT, Down, move, down 50
-bind = $mainMod SHIFT, Up, move, up 50
-bind = $mainMod SHIFT, Right, move, right 50
+#bind = $mainMod SHIFT, h, move, left 25
+#bind = $mainMod SHIFT, j, move, down 25
+#bind = $mainMod SHIFT, k, move, up 25
+#bind = $mainMod SHIFT, l, move, right 25
+#
+#bind = $mainMod SHIFT, Left, move, left 50
+#bind = $mainMod SHIFT, Down, move, down 50
+#bind = $mainMod SHIFT, Up, move, up 50
+#bind = $mainMod SHIFT, Right, move, right 50
 
 bind = $mainMod, P, exec, notify-send "Pomodoro" "$($scripts/pomo clock)" -t 250
 bind = $mainMod SHIFT, P, exec, $scripts/pomo pause && notify-send "⏸️ Paused Pomodoro" -t 250
@@ -380,7 +379,7 @@ input {
     kb_options = caps:none
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     touchpad {
         tap_to_click = yes
