--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -349,9 +349,9 @@ bind = $mainMod, Right, resizeactive, grow width 25
 bind = $mainMod, P, exec, notify-send "Pomodoro" "$($scripts/pomo clock)" -t 250
 bind = $mainMod SHIFT, P, exec, $scripts/pomo pause && notify-send "⏸️ Paused Pomodoro" -t 250
 
-bind = $mainMod SHIFT, F, setgeometry, 1920 1080
-bind = $mainMod, G, setgeometry, 900 500
-bind = $mainMod SHIFT, G, setgeometry, 500 500
+#bind = $mainMod SHIFT, F, setgeometry, 1920 1080
+#bind = $mainMod, G, setgeometry, 900 500
+#bind = $mainMod SHIFT, G, setgeometry, 500 500
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -382,10 +382,10 @@ input {
     follow_mouse = 0
 
     touchpad {
-        tap_to_click = yes
+        tap-to-click = yes
         natural_scroll = yes
-        dwt = yes
-        click_method = clickfinger
+        disable_while_typing = yes
+        tap_button_map = lrm
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
