--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -179,24 +179,13 @@ $start-wshowkeys = wshowkeys -F "JetBrainsMono Nerd Font 16" -a bottom
 $stop-wshowkeys = pkill wshowkeys
 
 # include wifi nmtui blueman-manager 
-$fzf-power-menu = alacritty -o font.size=22 --class 'powerwidget' -t 'powerwidget' -e $scripts/fzf-power-menu
+$fzf-power-menu = kitty -o font.size=22 --class 'powerwidget' -e $scripts/fzf-power-menu
 $fzf-shortcuts = kitty --class 'shortcutwidget' -e $scripts/fzf-shortcuts
 
 $music-cli = kitty --class 'music-cli' -e ncmpcpp 
 $music-dl = $scripts/music-download
 $color-picker = $scripts/colorpicker 
 $emoji = $scripts/emoji-picker
-
-## previous window rules
-#for_window [title="networkwidget"] border pixel 0, floating enable, resize set 453 500, move position 1380 490
-#for_window [title="powerwidget"] border pixel 0, floating enable, resize set 300 250, move position 0 0, focus
-#for_window [title="fzf-switcher"] border pixel 0, floating enable, focus
-#for_window [title="music-download"] border pixel 0, floating enable, focus
-#for_window [title="shortcutwidget"] border pixel 0, floating enable, resize set 1100 700, focus, blur enable
-#for_window [title="music-cli"] move container to workspace music, blur enable, floating disable
-#for_window [title="clipboard-history"] focus
-#for_window [title="emoji-picker"] focus
-#for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10, focus
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -233,25 +222,25 @@ workspace = 7, monitor:eDP-1
 workspace = 8, monitor:eDP-1
 workspace = 9, monitor:eDP-1
 workspace = 10, monitor:eDP-1
-workspace = name:music, monitor:eDP-2
-workspace = name:chatgpt, monitor:eDP-2, default:true
-workspace = name:email, monitor:eDP-2
-workspace = name:linear, monitor:eDP-2
-workspace = name:notion, monitor:eDP-2
-workspace = name:loom, monitor:eDP-2
-workspace = name:calendar, monitor:eDP-2
+workspace = 11, monitor:eDP-2, default:true #gpt
+workspace = 12, monitor:eDP-2 #music
+workspace = 13, monitor:eDP-2 #email
+workspace = 14, monitor:eDP-2 #linear
+workspace = 15, monitor:eDP-2 #notion
+workspace = 16, monitor:eDP-2 #loom
+workspace = 17, monitor:eDP-2 #calendar
 
 # Caps lock for toggling touchpad, find fix for hyprland
 #bind = Caps_Lock, exec, hyprctl input type:touchpad events toggle && notify-send "🚀 Trackpad Toggled" -t 150
 
 bind = $mainMod, Return, exec, flatpak run com.google.Chrome
-bind = $mainMod SHIFT, Return, exec, $host 
+bind = $mainMod SHIFT, Return, exec, $host -e fish
 
 bind = $mainMod SHIFT, Q, killactive,
 
-bind = $mainMod, D, exec, kitty --class=launcher -e env GLYPH_COMMAND="" GLYPH_DESKTOP="" GLYPH_PROMPT="🚀 " $scripts/launcher
+bind = $mainMod, D, exec, kitty --class="launcher" -e env GLYPH_COMMAND="" GLYPH_DESKTOP="" GLYPH_PROMPT="🚀 " $scripts/launcher
 
-bind = $mainMod, V, exec, kitty --class "clipboard-history" -t "clipboard-history" -e $scripts/fzf-clipboard-history
+bind = $mainMod, V, exec, kitty --class "clipboard-history" -e $scripts/fzf-clipboard-history
 
 bind = $mainMod SHIFT, V, exec, kitty --class "emoji-picker" -e sh -c "$scripts/$emoji"
 
@@ -267,8 +256,8 @@ bind = $mainMod, X, exec, $record-stop
 bind = $mainMod, I, exec, $waybar-toggle-0
 bind = $mainMod SHIFT, I, exec, $waybar-toggle-1
 
-bind = $mainMod, O, exec, hyprctl opacity plus 0.1
-bind = $mainMod SHIFT, O, exec, hyprctl opacity minus 0.1
+#bind = $mainMod, O, exec, hyprctl opacity plus 0.1
+#bind = $mainMod SHIFT, O, exec, hyprctl opacity minus 0.1
 
 bind = $mainMod, E, exec, thunar
 
@@ -277,25 +266,25 @@ bind = $mainMod, C, exec, $color-picker
 bind = $mainMod, apostrophe, exec, $start-wshowkeys
 bind = $mainMod SHIFT, apostrophe, exec, $stop-wshowkeys
 
-bind = $mainMod, M, workspace, music
-bind = $mainMod SHIFT, M, exec, $chrome --app=https://soundcloud.com
-
-bind = $mainMod, N, workspace, chatgpt
+bind = $mainMod, N, workspace, 11
 bind = $mainMod SHIFT, N, exec, $chrome --app=https://chat.openai.com/
 
-bind = $mainMod, W, workspace, email
+bind = $mainMod, M, workspace, 12 
+bind = $mainMod SHIFT, M, exec, $chrome --app=https://soundcloud.com
+
+bind = $mainMod, W, workspace, 13
 bind = $mainMod SHIFT, W, exec, $chrome --app=https://mail.superhuman.com/
 
-bind = $mainMod, grave, workspace, linear
+bind = $mainMod, grave, workspace, 14
 bind = $mainMod SHIFT, grave, exec, $chrome --app=https://linear.app/
 
-bind = $mainMod, Comma, workspace, notion
+bind = $mainMod, Comma, workspace, 15
 bind = $mainMod SHIFT, Comma, exec, $chrome --app=https://notion.so/
 
-bind = $mainMod, Semicolon, workspace, loom
+bind = $mainMod, Semicolon, workspace, 16 
 bind = $mainMod SHIFT, Semicolon, exec, $chrome --app=https://www.loom.com/home
 
-bind = $mainMod, Period, workspace, calendar
+bind = $mainMod, Period, workspace, 17
 bind = $mainMod SHIFT, Period, exec, $chrome --app=https://calendar.notion.so/
 
 bind = $mainMod SHIFT, E, exec, $chrome --app=https://drive.google.com/drive/u/0/
@@ -315,7 +304,7 @@ bind = , XF86AudioRaiseVolume, exec, $volume-up
 bind = , XF86AudioLowerVolume, exec, $volume-down
 bind = , XF86AudioMute, exec, $volume-mute
 
-bind = , XF86AudioMicMute, exec, kitty -e nmtui
+bind = , XF86AudioMicMute, exec, kitty -class "nmtui" -e nmtui
 bind = , XF86LaunchA, exec, blueman-manager
 bind = , XF86Search, exec, pavucontrol
 
@@ -359,18 +348,60 @@ bindm = $mainMod, mouse:273, resizewindow
 
 bind = Mod1 CTRL, Delete, exec, $fzf-power-menu
 
-# chrome webapps
+# chrome webapps rules
 windowrulev2 = move,name:^google-chrome$,workspace:1
-windowrulev2 = move,name:^chrome-soundcloud.com.*$,workspace:music
-windowrulev2 = move,name:^chrome-chat.openai.com.*$,workspace:chatgpt
-windowrulev2 = move,name:^chrome-mail.superhuman.com.*$,workspace:email
-windowrulev2 = move,name:^chrome-linear.app.*$,workspace:linear
-windowrulev2 = move,name:^chrome-notion.so.*$,workspace:notion
-windowrulev2 = move,name:^chrome-www.loom.com.*$,workspace:loom
-windowrulev2 = move,name:^chrome-calendar.notion.so.*$,workspace:calendar
+windowrulev2 = move,name:^chrome-chat.openai.com.*$,workspace:11
+windowrulev2 = move,name:^chrome-soundcloud.com.*$,workspace:12
+windowrulev2 = move,name:^chrome-mail.superhuman.com.*$,workspace:13
+windowrulev2 = move,name:^chrome-linear.app.*$,workspace:14
+windowrulev2 = move,name:^chrome-notion.so.*$,workspace:15
+windowrulev2 = move,name:^chrome-www.loom.com.*$,workspace:16
+windowrulev2 = move,name:^chrome-calendar.notion.so.*$,workspace:17
 
+#utilities rules
+windowrulev2 = float, class:(^clipboard-history$)
+windowrulev2 = center monitor eDP-2, class:(^clipboard-history$)
+windowrulev2 = animation slide, class:(^clipboard-history$)
 
-# flatpak override --filesystem=~/.themes:ro --filesystem=~/.icons:ro --user and put your themes in both /usr/share/themes and ~/.themes, and put your icons and XCursors in both /usr/share/icons and ~/.icons.
+windowrulev2 = float, class:(^emoji-picker$)
+windowrulev2 = center monitor eDP-2, class:(^emoji-picker$)
+windowrulev2 = animation slide, class:(^emoji-picker$)
+
+windowrulev2 = float, class:(^powerwidget$)
+windowrulev2 = center monitor eDP-2, class:(^powerwidget$)
+windowrulev2 = animation slide, class:(^powerwidget$)
+
+windowrulev2 = float, class:(^shortcutwidget$)
+windowrulev2 = center monitor eDP-2, class:(^shortcutwidget$)
+windowrulev2 = animation slide, class:(^shortcutwidget$)
+
+windowrulev2 = float, class:(^music-cli$)
+windowrulev2 = center monitor eDP-2, class:(^music-cli$)
+windowrulev2 = animation slide, class:(^music-cli$)
+
+windowrulev2 = float, class:(^music-download$)
+windowrulev2 = center monitor eDP-2, class:(^music-download$)
+windowrulev2 = animation slide, class:(^music-download$)
+
+windowrulev2 = float, class:(^launcher$)
+windowrulev2 = center monitor eDP-2, class:(^launcher$)
+windowrulev2 = animation slide, class:(^launcher$)
+
+windowrulev2 = float, class:(^thunar$)
+windowrulev2 = center monitor eDP-2, class:(^thunar$)
+windowrulev2 = animation slide, class:(^thunar$)
+
+windowrulev2 = float, class:(^nmtui$)
+windowrulev2 = center monitor eDP-2, class:(^nmtui$)
+windowrulev2 = animation slide, class:(^nmtui$)
+
+windowrulev2 = float, class:(^blueman-manager$)
+windowrulev2 = center monitor eDP-2, class:(^blueman-manager$)
+windowrulev2 = animation slide, class:(^blueman-manager$)
+
+windowrulev2 = float, class:(^pavucontrol$)
+windowrulev2 = center monitor eDP-2, class:(^pavucontrol$)
+windowrulev2 = animation slide, class:(^pavucontrol$)
 
 input {
     kb_layout = us
@@ -378,30 +409,24 @@ input {
     kb_variant = mac
     kb_options = caps:none
     kb_rules =
-
     follow_mouse = 0
-
     touchpad {
         tap-to-click = yes
         natural_scroll = yes
         disable_while_typing = yes
         tap_button_map = lrm
     }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 
 }
 
 
 decoration {
-
     rounding = 10
-    
     blur {
         enabled = false
         size = 3
         passes = 1
     }
-
     drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
@@ -411,9 +436,7 @@ decoration {
 animations {
     enabled = yes
     # https://wiki.hyprland.org/Configuring/Animations/ 
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -462,7 +485,5 @@ gestures {
 
 # Gestures
 exec-once = libinput-gestures
-
-
 
 
