fixing utilities and making scripts executable

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -114,7 +114,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # gammastep configured differently for each display
-exec-once = gammastep -t 3500:3500 -l 30.2:97.7 -m wayland
+#exec-once = gammastep -t 3500:3500 -l 30.2:97.7 -m wayland
 
 # notifications
 exec-once = mako
@@ -151,7 +151,7 @@ exec-once = mpDris2
 $term = alacritty
 $host = kitty
 
-$chrome = flatpak run com.google.chrome --profile-directory=default
+$chrome = flatpak run com.google.chrome
 
 $screenshot-full = $scripts/screenshot full
 $screenshot-area = $scripts/screenshot area
@@ -178,7 +178,6 @@ $playerctl-playing = notify-send "$(playerctl metadata artist)" "$(playerctl met
 $start-wshowkeys = wshowkeys -F "JetBrainsMono Nerd Font 16" -a bottom
 $stop-wshowkeys = pkill wshowkeys
 
-# include wifi nmtui blueman-manager 
 $fzf-power-menu = kitty -o font.size=22 --class 'powerwidget' -e $scripts/fzf-power-menu
 $fzf-shortcuts = kitty --class 'shortcutwidget' -e $scripts/fzf-shortcuts
 
@@ -304,14 +303,14 @@ bind = , XF86AudioRaiseVolume, exec, $volume-up
 bind = , XF86AudioLowerVolume, exec, $volume-down
 bind = , XF86AudioMute, exec, $volume-mute
 
-bind = , XF86AudioMicMute, exec, kitty -class "nmtui" -e nmtui
+bind = , XF86AudioMicMute, exec, kitty --class "nmtui" -e nmtui
 bind = , XF86LaunchA, exec, blueman-manager
 bind = , XF86Search, exec, pavucontrol
 
 bind = , XF86MonBrightnessUp, exec, $brightness-up
 bind = , XF86MonBrightnessDown, exec, $brightness-down
 
-# decide what key to use to dismiss notifications!!
+# add to shortcut list
 # bind = $mainMod, delete, exec, makoctl dismiss -a
 
 # Moving Around
@@ -359,49 +358,17 @@ windowrulev2 = move,name:^chrome-www.loom.com.*$,workspace:16
 windowrulev2 = move,name:^chrome-calendar.notion.so.*$,workspace:17
 
 #utilities rules
-windowrulev2 = float, class:(^clipboard-history$)
-windowrulev2 = center monitor eDP-2, class:(^clipboard-history$)
-windowrulev2 = animation slide, class:(^clipboard-history$)
-
-windowrulev2 = float, class:(^emoji-picker$)
-windowrulev2 = center monitor eDP-2, class:(^emoji-picker$)
-windowrulev2 = animation slide, class:(^emoji-picker$)
-
-windowrulev2 = float, class:(^powerwidget$)
-windowrulev2 = center monitor eDP-2, class:(^powerwidget$)
-windowrulev2 = animation slide, class:(^powerwidget$)
-
-windowrulev2 = float, class:(^shortcutwidget$)
-windowrulev2 = center monitor eDP-2, class:(^shortcutwidget$)
-windowrulev2 = animation slide, class:(^shortcutwidget$)
-
-windowrulev2 = float, class:(^music-cli$)
-windowrulev2 = center monitor eDP-2, class:(^music-cli$)
-windowrulev2 = animation slide, class:(^music-cli$)
-
-windowrulev2 = float, class:(^music-download$)
-windowrulev2 = center monitor eDP-2, class:(^music-download$)
-windowrulev2 = animation slide, class:(^music-download$)
-
-windowrulev2 = float, class:(^launcher$)
-windowrulev2 = center monitor eDP-2, class:(^launcher$)
-windowrulev2 = animation slide, class:(^launcher$)
-
-windowrulev2 = float, class:(^thunar$)
-windowrulev2 = center monitor eDP-2, class:(^thunar$)
-windowrulev2 = animation slide, class:(^thunar$)
-
-windowrulev2 = float, class:(^nmtui$)
-windowrulev2 = center monitor eDP-2, class:(^nmtui$)
-windowrulev2 = animation slide, class:(^nmtui$)
-
-windowrulev2 = float, class:(^blueman-manager$)
-windowrulev2 = center monitor eDP-2, class:(^blueman-manager$)
-windowrulev2 = animation slide, class:(^blueman-manager$)
-
-windowrulev2 = float, class:(^pavucontrol$)
-windowrulev2 = center monitor eDP-2, class:(^pavucontrol$)
-windowrulev2 = animation slide, class:(^pavucontrol$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^clipboard-history$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^emoji-picker$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^powerwidget$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^shortcutwidget$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^music-cli$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^music-download$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^launcher$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^thunar$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^nmtui$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^blueman-manager$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^pavucontrol$)
 
 input {
     kb_layout = us
@@ -431,6 +398,7 @@ decoration {
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+    screen_shader = ~/.config/hypr/shaders/blue-light-filter.glsl
 }
 
 animations {
