fixing window rules?

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -348,27 +348,27 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = Mod1 CTRL, Delete, exec, $fzf-power-menu
 
 # chrome webapps rules
-windowrulev2 = move,name:^google-chrome$,workspace:1
-windowrulev2 = move,name:^chrome-chat.openai.com.*$,workspace:11
-windowrulev2 = move,name:^chrome-soundcloud.com.*$,workspace:12
-windowrulev2 = move,name:^chrome-mail.superhuman.com.*$,workspace:13
-windowrulev2 = move,name:^chrome-linear.app.*$,workspace:14
-windowrulev2 = move,name:^chrome-notion.so.*$,workspace:15
-windowrulev2 = move,name:^chrome-www.loom.com.*$,workspace:16
-windowrulev2 = move,name:^chrome-calendar.notion.so.*$,workspace:17
+windowrulev2 = move,class:^google-chrome$,workspace:1
+windowrulev2 = move,class:^chrome-chat.openai.com.*$,workspace:11
+windowrulev2 = move,class:^chrome-soundcloud.com.*$,workspace:12
+windowrulev2 = move,class:^chrome-mail.superhuman.com.*$,workspace:13
+windowrulev2 = move,class:^chrome-linear.app.*$,workspace:14
+windowrulev2 = move,class:^chrome-notion.so.*$,workspace:15
+windowrulev2 = move,class:^chrome-www.loom.com.*$,workspace:16
+windowrulev2 = move,class:^chrome-calendar.notion.so.*$,workspace:17
 
 #utilities rules
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^clipboard-history$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^emoji-picker$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^powerwidget$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^shortcutwidget$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^music-cli$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^music-download$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^launcher$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^thunar$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^nmtui$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^blueman-manager$)
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:(^pavucontrol$)
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^clipboard-history$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^emoji-picker$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^powerwidget$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^shortcutwidget$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^music-cli$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^music-download$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^launcher$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^thunar$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^nmtui$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^blueman-manager$
+windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^pavucontrol$
 
 input {
     kb_layout = us
