fixing window rules 2

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -357,18 +357,18 @@ windowrulev2 = move,class:^chrome-notion.so.*$,workspace:15
 windowrulev2 = move,class:^chrome-www.loom.com.*$,workspace:16
 windowrulev2 = move,class:^chrome-calendar.notion.so.*$,workspace:17
 
-#utilities rules
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^clipboard-history$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^emoji-picker$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^powerwidget$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^shortcutwidget$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^music-cli$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^music-download$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^launcher$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^thunar$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^nmtui$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^blueman-manager$
-windowrulev2 = float, size 35% 35%, center monitor eDP-2, animation slide, move 63% 60%, class:^pavucontrol$
+# Utilities rules 
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:clipboard-history$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:emoji-picker$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:powerwidget$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:shortcutwidget$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:music-cli$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:music-download$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:launcher$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:thunar$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:nmtui$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:blueman-manager$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:pavucontrol$
 
 input {
     kb_layout = us
