fixing window rules 4

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -178,7 +178,7 @@ $playerctl-playing = notify-send "$(playerctl metadata artist)" "$(playerctl met
 $start-wshowkeys = wshowkeys -F "JetBrainsMono Nerd Font 16" -a bottom
 $stop-wshowkeys = pkill wshowkeys
 
-$fzf-power-menu = kitty -o font.size=32 --class 'powerwidget' -e $scripts/fzf-power-menu
+$fzf-power-menu = kitty --class 'powerwidget' -e $scripts/fzf-power-menu
 $fzf-shortcuts = kitty --class 'shortcutwidget' -e $scripts/fzf-shortcuts
 
 $music-cli = kitty --class 'music-cli' -e ncmpcpp 
