--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -241,7 +241,7 @@ bind = $mainMod, D, exec, kitty --class="launcher" -e env GLYPH_COMMAND="" GLYPH
 
 bind = $mainMod, V, exec, kitty --class "clipboard-history" -e $scripts/fzf-clipboard-history
 
-bind = $mainMod SHIFT, V, exec, kitty --class "emoji-picker" -e $scripts/$emoji
+bind = $mainMod SHIFT, V, exec, kitty --class "emoji-picker" -e $emoji
 
 bind = $mainMod, A, exec, $screenshot-full
 bind = $mainMod SHIFT, A, exec, $screenshot-area
